deployments/apps/whoami/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: whoami
                port:
                  number: 80
      host: whoami.whoison.top
